# SDR

./: .gitignore  readme.md  simple_trxCOPY.py
Notes/: wbfm  (+5 more)
SDR/ExternalTools/hydra/hydra-0.4/gr-hydra/: AUTHORS  ChangeLog  Makefile.am  Makefile.common  Makefile.in  README  aclocal.m4  bootstrap  configure  configure.ac
SDR/ExternalTools/hydra/hydra-0.4/gr-hydra/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
SDR/ExternalTools/hydra/hydra-0.4/gr-hydra/config/: Makefile.am  Makefile.in  grc_hydra_core.m4  grc_hydra_gui.m4  grc_hydra_mac.m4  grc_hydra_mpif.m4  grc_hydra_patch.m4  grc_hydra_phy.m4  grc_hydra_rf.m4  grc_hydra_util.m4
SDR/ExternalTools/hydra/hydra-0.4/gr-hydra/doc/: Makefile.am  Makefile.in  configDoxy
SDR/ExternalTools/hydra/hydra-0.4/gr-hydra/src/: Makefile.am  Makefile.in  README
SDR/ExternalTools/hydra/hydra-0.4/gr-hydra/src/fpga/: TODO  mimo_2rx_2tx.rbf  mimo_fifo_reader.v  tx_buffer_mimo.v
SDR/ExternalTools/hydra/hydra-0.4/gr-hydra/src/patch/: Makefile.am  Makefile.in
SDR/ExternalTools/hydra/hydra-0.4/gr-hydra/src/patch/scripts/: Makefile.am  Makefile.in  gnuradio_core_patch.in  gr_usrp_patch.in
SDR/ExternalTools/hydra/hydra-0.4/gr-hydra/src/patch/source/: Makefile.am  Makefile.in  gnuradio-core.src.lib.runtime.gr_basic_block.fix.h  gnuradio-core.src.lib.runtime.gr_basic_block.fix.i  gnuradio-core.src.lib.runtime.gr_flat_flowgraph.fix.cc  gr-usrp.src.usrp_source_base.fix.cc  (+1 more)
SDR/ExternalTools/hydra/hydra-0.4/gr-hydra/src/python/: Makefile.am  Makefile.in  __init__.py
SDR/ExternalTools/hydra/hydra-0.4/gr-hydra/src/swig/: Makefile.am  Makefile.in  __init__.py
SDR/ExternalTools/hydra/hydra-0.4/gr-hydra/src/util/: Makefile.am  Makefile.in  hydra-addrserver.in
SDR/ExternalTools/hydra/hydra-0.4/gr-mimo/: AUTHORS  ChangeLog  Makefile.am  Makefile.common  README  config.h.in  configure.ac
SDR/ExternalTools/hydra/hydra-0.4/gr-mimo/config/: Makefile.am  grc_mimo.m4
SDR/ExternalTools/hydra/hydra-0.4/gr-mimo/doc/: Makefile.am
SDR/ExternalTools/hydra/hydra-0.4/gr-mimo/src/: Makefile.am
SDR/ExternalTools/hydra/hydra-0.4/gr-mimo/src/demo/: Makefile.am  hydra-csma.in  hydra-demo-csma.in  hydra-demo.in  hydra-mimo.in  hydra-tunnel.in  sconf-1  sconf-2  sconf-3  sconf-4
SDR/ExternalTools/hydra/hydra-0.4/gr-mimo/src/python/: Makefile.am  __init__.py  csma.py  dot11mac.py  dummy-mac.py  mac_db.py  mimo_adapt.py  mimo_channel.py  mimo_control.py  mimo_csi.py  mimo_manager.py  mimo_mpif.py  mimo_rate_history.py  mimo_self_adaptation.py  mimo_transceiver.py  qa_mimo.py  run_tests.in  run_tunserver.py  simple-mac.py  test-csma.py  test.py
SDR/ExternalTools/hydra/hydra-0.4/gr-mimo/src/swig/: Makefile.am  mimo.i
SDR/ExternalTools/hydra/hydra-0.4/meta-80211n/: AUTHORS  ChangeLog  Makefile.common  README  config.h.in  configure.ac
SDR/ExternalTools/hydra/hydra-0.4/meta-80211n/config/: Makefile.am  grc_meta_80211n.m4
SDR/ExternalTools/hydra/hydra-0.4/meta-80211n/src/: Makefile.am  meta-80211n.pc.in
SDR/ExternalTools/hydra/hydra-0.4/meta-80211n/src/common/: foo.cc  foo.h
SDR/ExternalTools/hydra/hydra-0.4/meta-80211n/src/rx/: Makefile.am  cfo_estimation_11n.cc  cfo_estimation_11n.h  channel_estimation_11n.cc  channel_estimation_11n.h  data_decoding_11n.cc  data_decoding_11n.h  deinterleaving_11n.cc  deinterleaving_11n.h  descrambling_11n.cc  descrambling_11n.h  frame_alignment_11n.cc  frame_alignment_11n.h  frame_detection_11n.cc  frame_detection_11n.h  header_decoding_11n.cc  header_decoding_11n.h  pilot_estimation_11n.cc  pilot_estimation_11n.h  pilot_removal_11n.cc  pilot_removal_11n.h  rfo_correction_11n.cc  rfo_correction_11n.h  rxvector.cc  rxvector.h  signal_field_decoding_11n.cc  signal_field_decoding_11n.h  soft_bits_decoding_11n.cc  soft_bits_decoding_11n.h  soft_demapping_11n.cc  soft_demapping_11n.h  space_time_decoding_11n.cc  space_time_decoding_11n.h  spatial_deparsing_11n.cc  spatial_deparsing_11n.h  spatial_equalization_11n.cc  spatial_equalization_11n.h
SDR/ExternalTools/hydra/hydra-0.4/meta-80211n/src/tx/: Makefile.am  channel_encoding_11n.cc  channel_encoding_11n.h  constellation_mapping_11n.cc  constellation_mapping_11n.h  interleaving_11n.cc  interleaving_11n.h  ltf_formatting_11n.cc  ltf_formatting_11n.h  payload_formatting_11n.cc  payload_formatting_11n.h  pilot_formatting_11n.cc  pilot_formatting_11n.h  preamble_formatting_11n.cc  preamble_formatting_11n.h  precoding_matrices_11n.cc  precoding_matrices_11n.h  scrambling_11n.cc  scrambling_11n.h  signal_field_formatting_11n.cc  signal_field_formatting_11n.h  space_time_coding_11n.cc  space_time_coding_11n.h  spatial_mapping_11n.cc  spatial_mapping_11n.h  spatial_parsing_11n.cc  spatial_parsing_11n.h  stf_formatting_11n.cc  stf_formatting_11n.h  transmission_formatting_11n.cc  transmission_formatting_11n.h  transmission_interface_11n.cc  transmission_interface_11n.h  txvector.cc  txvector.h
SDR/ExternalTools/hydra/hydra-0.4/meta-80211n/test/: Makefile.am  qa_foo.cc  qa_foo.h  qa_meta_80211n.cc  qa_meta_80211n.h  qa_sample_simulation.cc  qa_sample_simulation.h  test-all.cc  test_11n.cc  test_11n.h  test_simulation.cc
SDR/ExternalTools/hydra/hydra-0.4/wicom/: AUTHORS  ChangeLog  Makefile.am  Makefile.common  README  bootstrap  config.h.in  configure.ac
SDR/ExternalTools/hydra/hydra-0.4/wicom/config/: Makefile.am  grc_ann.m4  grc_build.m4  grc_meta_80211n.m4  grc_precoding.m4  grc_self_adaptation.m4  grc_wicom.m4
SDR/ExternalTools/hydra/hydra-0.4/wicom/src/: Makefile.am  wicom.pc.in
SDR/ExternalTools/hydra/hydra-0.4/wicom/src/ann/: Makefile.am  README  ann.pc.in
SDR/ExternalTools/hydra/hydra-0.4/wicom/src/precoding/: Beamforming_MIMO_OFDM.cc  Beamforming_MIMO_OFDM.h  Makefile.am  Precoding_MIMO_OFDM.cc  Precoding_MIMO_OFDM.h
SDR/ExternalTools/hydra/hydra-0.4/wicom/src/self-adaptation/: Makefile.am  self_adaptation_mimo_ofdm.cc  self_adaptation_mimo_ofdm.h
SDR/ExternalTools/hydra/hydra-0.4/wicom/test/: Makefile.am  qa_sa.cc  qa_sa.h  qa_wicom.cc  qa_wicom.h  test-all.cc  test_11n.cc  test_11n.h  test_11n_sa_testing.cc  test_11n_without_synch.cc
(+1232 files in other folders)
